<resources>
    <string name="app_name">Geopaparazzi</string>
    <string name="action_settings">Settings</string>
    <string name="action_advanced_settings">Advanced</string>
    <string name="label_green">green</string>
    <string name="label_blue">blue</string>
    <string name="label_alpha">alpha</string>
    <string name="label_red">red</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="app_file_name">Geopaparazzi Project Database</string>
    <string name="notesvisibilityToggle">Toggle notes visibility.</string>
    <string name="datasaved">Data successfully exported to: </string>
    <string name="data_nonsaved">An error occurred during the data export!</string>
    <string name="loggingoff">Stopped all sensors.</string>
    <string name="nogps_data">No gps data available yet!</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="utctime">time: </string>
    <string name="altim">altim: </string>
    <string name="lat">lat: </string>
    <string name="lon">lon: </string>
    <string name="azimuth">azimuth: </string>
    <string name="go_to">Go to</string>
    <string name="goto_coordinate">go to coordinate</string>
    <string name="geocoding">geocoding</string>
    <string name="prompt_gpsenable">Your gps is disabled! Would you like to enable it?</string>
    <string name="width_label">width</string>
    <string name="color_label">color</string>
    <string name="mainmenu_kmlexport">export</string>
    <string name="mainmenu_import">import</string>
    <string name="mainmenu_gpsdataselect">Gps data list</string>
    <string name="mainmenu_preferences">Settings</string>
    <string name="mainmenu_merge">merge selected logs</string>
    <string name="gpslogproperty">Properties for: </string>
    <string name="gpslog_name">Log name</string>
    <string name="gpslog_chart">Chart</string>
    <string name="gpslog_zoom">zoom to</string>
    <string name="gpslog_delete">Delete</string>
    <string name="mapproperty">Properties for: </string>
    <string name="map_zoom">Zoom to the map</string>
    <string name="map_delete">Delete the map</string>
    <string name="gps_preferences">Gps settings</string>
    <string name="gps_preferences_summary">Set GPS preferences as logging distance or interval.</string>
    <string name="gps_logging_distance">Min gps logging distance</string>
    <string name="gps_logging_interval">Min gps logging interval</string>
    <string name="gps_use_android_level">Use at android level (saves battery, needs restart)</string>
    <string name="gps_use_android_level_summary">If checked, the gps settings are applied at operating system level, which can save battery, but might have a less stable signal when choosing large intervals (if you have gps connection problems on check devices, leave this unchecked). Note that the gps os powered continuously for send intervals less than 100 seconds. For better battery life choose larger intervals.</string>
    <string name="sms_preferences">Sms settings</string>
    <string name="sms_preferences_summary">Set the panic number and enable the sms catcher.</string>
    <string name="sms_catcher">Enable sms catcher</string>
    <string name="databaseError">An error occurred while connecting to the database</string>
    <string name="chart_profile_view">Profile View</string>
    <string name="gpx_import_processing">Importing gpx…</string>
    <string name="osm_additionalinfo">Add info to tag</string>
    <string name="osm_tagsgrid">Choose a tag to insert</string>
    <string name="text_show_position_on_map">map view</string>
    <string name="text_take_a_gps_note">take note</string>
    <string name="text_undo_a_gps_note">undo note</string>
    <string name="gps_log">gps log</string>
    <string name="gps_log_name">Insert a gps log name or accept the default one</string>
    <string name="audio_recording">Recording audio… push here to stop</string>
    <string name="audio_recording_stop">stop</string>
    <string name="panic">panic!</string>
    <string name="panic_number">Panic number</string>
    <string name="panic_number_notset">No valid panic number seems to be available. Did you enable it in the settings?</string>
    <string name="panic_upper">  PANIC!  </string>
    <string name="send_status_update">or just send your position</string>
    <string name="help_needed">Help needed!</string>
    <string name="message_sent">Message sent</string>
    <string name="last_note_deleted">Deleted last note</string>
    <string name="last_note_not_deleted">Couldn\'t delete last note</string>
    <string name="text_logging">logging</string>
    <string name="text_gpson">gps on</string>
    <string name="debug">Debug settings</string>
    <string name="enable_debug">Enable debug log</string>
    <string name="gpslogging_only">This function is available only when the gps is active and a signal is available.</string>
    <string name="remove_last_note_prompt">Do you really want to remove the last text note? This can\'t be undone.</string>
    <string name="reset">Create new project</string>
    <string name="load">Load existing project</string>
    <string name="phonenumber_hint">Enter comma separated phone numbers…</string>
    <string name="enable_automatic_center_on_gps">Automatic center on GPS</string>
    <string name="gps_use_coarse">Use network based position instead of gps (needs restart)</string>
    <string name="geopapcloud_preferences">Cloud projects sync settings</string>
    <string name="geopapcloud_preferences_summary">Set server sync credentials and settings for cloud services.</string>
    <string name="geopapcloud_user_label">Username</string>
    <string name="geopapcloud_password_label">Password</string>
    <string name="geopapcloud_server_label">Server to connect to</string>
    <string name="map_textsize_factor">Map textsize factor</string>
    <string name="map_textsize_factor_summary">Textsize factor for mapsforge map files.</string>
    <string name="keep_screen_on">Keep the screen on</string>
    <string name="keep_screen_on_summary">Keeps the screen on when on dashboard and map view.</string>
    <string name="use_custom_sdcard_summary">Use a custom sdcard path (useful in case of multiple storages). WARNING: USE AT OWN RISK</string>
    <string name="custom_sdcard_path">Custom sdcard path</string>
    <string name="size">Size</string>
    <string name="screen_preferences">Screen settings</string>
    <string name="screen_preferences_summary">Set the screen preferences as the center cross or the screen density.</string>
    <string name="cross_properties_summary">Properties of the cross used to place notes.</string>
    <string name="cross_properties">Center Cross</string>
    <string name="color">Color</string>
    <string name="keep_use_imperial">Use imperial units</string>
    <string name="keep_use_imperial_sum">Uses imperial units instead of metric where possible.</string>
    <string name="high_density_display">High density display</string>
    <string name="high_density_display_sum">If on, online osm maptiles are scaled for better readability.</string>
    <string name="spatialite_preferences">Spatialite settings</string>
    <string name="spatialite_preferences_summary">Set advanced spatialite configurations.</string>
    <string name="spatialite_recovery_mode">Spatialite Recovery Mode</string>
    <string name="spatialite_recover_mode_tooltip">If on, on next startup an attempt will be made to correct faulty tables.</string>
    <string name="fred_preferences">FRED preferences</string>
    <string name="fred_external_db_path">External database path</string>
    <string name="fred_external_db_name">External database name</string>
    <string name="parent_table_info">Parent table info</string>
    <string name="fred_parent_table_present_summary">Is there a parent table that the table holding GPS data is related to? Check if yes.</string>
    <string name="child_table_info">Child table info</string>
    <string name="fred_first_level_table">Parent table name</string>
    <string name="fred_second_level_table">Child table name</string>
    <string name="fred_first_level_ID">ID column name</string>
    <string name="fred_second_level_ID">ID column name</string>
    <string name="fred_first_level_descriptor">Descriptor column name</string>
    <string name="fred_second_level_descriptor">Descriptor column name</string>
    <string name="fred_descriptor_summary">A location descriptor field, e.g. sitename, point number, etc.</string>
    <string name="fred_first_level_timestamp">Timestamp column name</string>
    <string name="fred_second_level_timestamp">Timestamp column name</string>
    <string name="fred_column_Lat">Latitude column name</string>
    <string name="fred_column_Lon">Longitude column name</string>
    <string name="fred_column_Pdop">PDOP column name</string>
    <string name="fred_column_acc">GPS accuracy column name</string>
    <string name="fred_column_acc_units">GPS accuracy units column name</string>
    <string name="fred_column_gps_average_count">GPS averaging count column name</string>
    <string name="fred_column_gps_average_time_min">GPS averaging time-minutes column name</string>
    <string name="fred_column_gps_average_time_sec">GPS averaging time-seconds column name</string>
    <string name="fred_column_gps_unit">GPS unit column name</string>
    <string name="fred_column_coord_source">Source of Coordinates (map center or GPS or GPS avg) column name</string>
    <string name="fred_column_elev">Elevation column name</string>
    <string name="fred_column_note">Notes column name</string>
    <string name="fred_tables_two_levels">Parent-Child table structure</string>
    <string name="fred_quick_sets_summary">Change all preferences at once here with quick-sets.</string>
    <string name="fred_quick_sets">Quick-sets</string>
    <string name="gps_avg_sample_size">GPS Averaging; number of samples.</string>
    <string name="fred_defval_external_db_path">/FRED/FRED.db</string>
    <string name="fred_defval_external_db_name">FRED</string>
    <string name="fred_defval_first_level_table">IPAQ_surveysite</string>
    <string name="fred_defval_first_level_ID">Site_ID</string>
    <string name="fred_defval_first_level_descriptor">Surveysite</string>
    <string name="fred_defval_first_level_timestamp">dtmRecCreate</string>
    <string name="fred_defval_second_level_table">IPAQ_Obspts</string>
    <string name="fred_defval_second_level_ID">Obspts_ID</string>
    <string name="fred_defval_column_Lat">latitude</string>
    <string name="fred_defval_column_Lon">longitude</string>
    <string name="fred_defval_column_Pdop">dblGpsPdop</string>
    <string name="fred_defval_column_acc">dblGpsAcc</string>
    <string name="fred_defval_column_acc_units">strGpsAccUnits</string>
    <string name="fred_defval_column_gps_avg_count">intGpsAverageCount</string>
    <string name="fred_defval_column_gps_average_time_min">intGpsAverageTimeMin</string>
    <string name="fred_defval_column_gps_average_time_sec">intGpsAverageTimeSec</string>
    <string name="fred_defval_column_gps_unit">strGPSunit</string>
    <string name="fred_defval_column_coord_source">strPositionMethod</string>
    <string name="fred_defval_column_elev">dblElev</string>
    <string name="fred_defval_column_note">Comments</string>
    <string name="fred_defval_two_levels">true</string>
    <string name="fred_defval_second_level_descriptor">Obspt</string>
    <string name="fred_defval_second_level_timestamp">dtmRecCreate</string>
    <string name="force_locale_title">Force locale</string>
    <string name="force_locale_summary">Forces the selected locale regardless of Android\'s current locale.</string>
    <string name="routing_pref_title">Routing api key</string>
    <string name="routing_pref_summary">To use MapQuest and Graphhopper routing services insert the proper ApiKey.</string>
</resources>