<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:orderingFromXml="true">

    <PreferenceScreen
        android:order="1"
        android:title="@string/gps_preferences"
        android:summary="@string/gps_preferences_summary"
        >
        <EditTextPreference
            android:defaultValue="1"
            android:inputType="number"
            android:key="PREFS_KEY_GPS_LOGGING_DISTANCE"
            android:order="3"
            android:title="@string/gps_logging_distance" />

        <ListPreference
            android:defaultValue="3"
            android:entries="@array/gps_time_name"
            android:entryValues="@array/gps_time_value"
            android:key="PREFS_KEY_GPS_LOGGING_INTERVAL"
            android:order="4"
            android:title="@string/gps_logging_interval" />

        <CheckBoxPreference
            android:key="enable_automatic_center_on_gps"
            android:order="5"
            android:title="@string/enable_automatic_center_on_gps" />
        <CheckBoxPreference
            android:key="PREFS_KEY_GPS_USE_NETWORK_POSITION"
            android:order="6"
            android:title="@string/gps_use_coarse" />
		<EditTextPreference
			android:defaultValue="150"
			android:inputType="number"
			android:key="PREFS_KEY_GPSAVG_NUMBER_SAMPLES"
			android:order="7"
			android:title="@string/gps_avg_sample_size" />

	</PreferenceScreen>
    <PreferenceScreen
        android:order="8"
        android:title="@string/sms_preferences"
        android:summary="@string/sms_preferences_summary">
        <CheckBoxPreference
            android:key="PREFS_KEY_SMSCATCHER"
            android:order="9"
            android:title="@string/sms_catcher" />

        <EditTextPreference
            android:defaultValue=""
            android:key="panic_number"
            android:order="10"
            android:title="@string/panic_number" />
    </PreferenceScreen>
    <PreferenceScreen
        android:order="30"
        android:title="@string/screen_preferences"
        android:summary="@string/screen_preferences_summary">
        <PreferenceScreen
            android:order="60"
            android:summary="@string/cross_properties_summary"
            android:title="@string/cross_properties">
            <ListPreference
                android:entries="@array/array_colornames"
                android:entryValues="@array/array_colornames"
                android:key="PREFS_KEY_CROSS_COLOR"
                android:order="61"
                android:title="@string/color" />
            <ListPreference
                android:entries="@array/decimation_factor"
                android:entryValues="@array/decimation_factor"
                android:key="PREFS_KEY_CROSS_WIDTH"
                android:order="62"
                android:title="@string/width" />
            <ListPreference
                android:entries="@array/cross_size"
                android:entryValues="@array/cross_size"
                android:key="PREFS_KEY_CROSS_SIZE"
                android:order="63"
                android:title="@string/size" />
        </PreferenceScreen>

        <EditTextPreference
            android:defaultValue="2.5"
            android:inputType="numberDecimal"
            android:key="mapsview_textsize_factor"
            android:order="80"
            android:title="@string/map_textsize_factor"
            android:summary="@string/map_textsize_factor_summary"
            />

        <CheckBoxPreference
            android:key="PREFS_KEY_SCREEN_ON"
            android:order="90"
            android:summary="@string/keep_screen_on_summary"
            android:title="@string/keep_screen_on" />
        <CheckBoxPreference
            android:key="PREFS_KEY_IMPERIAL"
            android:order="91"
            android:summary="@string/keep_use_imperial_sum"
            android:title="@string/keep_use_imperial" />
        <CheckBoxPreference
            android:key="PREFS_KEY_RETINA"
            android:order="92"
            android:summary="@string/high_density_display_sum"
            android:title="@string/high_density_display" />
    </PreferenceScreen>
    <PreferenceScreen
        android:order="40"
        android:title="@string/spatialite_preferences"
        android:summary="@string/spatialite_preferences_summary">
        <CheckBoxPreference
            android:key="PREFS_KEY_SPATIALITE_RECOVERY_MODE"
            android:order="41"
            android:summary="@string/spatialite_recover_mode_tooltip"
            android:title="@string/spatialite_recovery_mode" />
    </PreferenceScreen>

    <eu.hydrologis.geopaparazzi.preferences.CustomSdcardPathPreference
        android:defaultValue=""
        android:key="PREFS_KEY_CUSTOM_EXTERNALSTORAGE"
        android:order="100"
        android:summary="@string/use_custom_sdcard_summary"
        android:title="@string/custom_sdcard_path" />

    <eu.hydrologis.geopaparazzi.preferences.ForceLocalePreference
        android:defaultValue="en"
        android:key="PREFS_KEY_FORCELOCALE"
        android:order="102"
        android:summary="@string/force_locale_summary"
        android:title="@string/force_locale_title" />

    <PreferenceScreen
        android:order="210"
        android:title="@string/geopapcloud_preferences"
        android:summary="@string/geopapcloud_preferences_summary">
        <EditTextPreference
            android:key="stage_user_key"
            android:order="212"
            android:title="@string/geopapcloud_user_label" />
        <EditTextPreference
            android:inputType="textPassword"
            android:key="stage_pwd_key"
            android:order="213"
            android:title="@string/geopapcloud_password_label" />
        <EditTextPreference
            android:defaultValue=""
            android:key="stage_server_key"
            android:order="214"
            android:title="@string/geopapcloud_server_label" />
    </PreferenceScreen>
    <EditTextPreference
        android:defaultValue=""
        android:key="ROUTING_API_KEY"
        android:order="220"
        android:summary="@string/routing_pref_summary"
        android:title="@string/routing_pref_title" />
    <PreferenceScreen
        android:title="@string/fred_preferences" 
        android:order="300">
	    <eu.hydrologis.geopaparazzi.preferences.FredQuickSets
			android:defaultValue=""
			android:key="PREFS_KEY_FRED_QUICK_SET"
			android:order="301"
			android:summary="@string/fred_quick_sets_summary"
			android:title="@string/fred_quick_sets" />
        <EditTextPreference 
            android:key="EXTERNAL_DB" 
            android:title="@string/fred_external_db_path"
            android:defaultValue="@string/fred_defval_external_db_path" 
            android:order="302">
        </EditTextPreference> 
        <EditTextPreference 
            android:key="EXTERNAL_DB_NAME" 
            android:title="@string/fred_external_db_name"
            android:defaultValue="@string/fred_defval_external_db_name" 
            android:order="303">
        </EditTextPreference> 
        <PreferenceScreen
	       	android:title="@string/child_table_info" 
	        android:order="320">   
	        <EditTextPreference 
	            android:key="SECOND_LEVEL_TABLE" 
	            android:title="@string/fred_second_level_table" 
	            android:defaultValue="@string/fred_defval_second_level_table"
	            android:order="321">
	        </EditTextPreference>
	        <EditTextPreference 
	            android:key="COLUMN_SECOND_LEVEL_ID" 
	            android:title="@string/fred_second_level_ID" 
	            android:defaultValue="@string/fred_defval_second_level_ID"
	            android:order="322">          
	        </EditTextPreference>
	       	<EditTextPreference 
	            android:key="COLUMN_SECOND_LEVEL_DESCRIPTOR" 
	            android:title="@string/fred_second_level_descriptor" 
	            android:defaultValue="@string/fred_defval_second_level_descriptor"
	            android:order="323"
	          	android:summary="@string/fred_descriptor_summary">
	        </EditTextPreference>
	       	<EditTextPreference 
	            android:key="COLUMN_LAT" 
	            android:title="@string/fred_column_Lat" 
	            android:defaultValue="@string/fred_defval_column_Lat"
	            android:order="324">
	        </EditTextPreference>
	        <EditTextPreference 
	            android:key="COLUMN_LON" 
	            android:title="@string/fred_column_Lon" 
	            android:defaultValue="@string/fred_defval_column_Lon"
	            android:order="325">
	        </EditTextPreference>
			<EditTextPreference
				android:key="COLUMN_ELEV"
				android:title="@string/fred_column_elev"
				android:defaultValue="@string/fred_defval_column_elev"
				android:order="326">
			</EditTextPreference>
            <EditTextPreference
                android:key="COLUMN_ACC"
                android:title="@string/fred_column_acc"
                android:defaultValue="@string/fred_defval_column_acc"
                android:order="327">
            </EditTextPreference>
			<EditTextPreference
				android:key="COLUMN_PDOP"
				android:title="@string/fred_column_Pdop"
				android:defaultValue="@string/fred_defval_column_Pdop"
				android:order="328">
			</EditTextPreference>
            <EditTextPreference
                android:key="COLUMN_ACC_UNITS"
                android:title="@string/fred_column_acc_units"
                android:defaultValue="@string/fred_defval_column_acc_units"
                android:order="329">
            </EditTextPreference>
            <EditTextPreference
                android:key="COLUMN_COORD_SOURCE"
                android:title="@string/fred_column_coord_source"
                android:defaultValue="@string/fred_defval_column_coord_source"
                android:order="330">
            </EditTextPreference>
			<EditTextPreference
				android:key="COLUMN_GPS_UNIT"
				android:title="@string/fred_column_gps_unit"
				android:defaultValue="@string/fred_defval_column_gps_unit"
				android:order="331">
			</EditTextPreference>
			<EditTextPreference
				android:key="COLUMN_GPS_AVG_TIME_MIN"
				android:title="@string/fred_column_gps_average_time_min"
				android:defaultValue="@string/fred_defval_column_gps_average_time_min"
				android:order="332">
			</EditTextPreference>
			<EditTextPreference
				android:key="COLUMN_GPS_AVG_TIME_SEC"
				android:title="@string/fred_column_gps_average_time_sec"
				android:defaultValue="@string/fred_defval_column_gps_average_time_sec"
				android:order="333">
			</EditTextPreference>
			<EditTextPreference
				android:key="COLUMN_GPS_AVG_COUNT"
				android:title="@string/fred_column_gps_average_count"
				android:defaultValue="@string/fred_defval_column_gps_avg_count"
				android:order="334">
			</EditTextPreference>
			<EditTextPreference
	            android:key="COLUMN_NOTE" 
	            android:title="@string/fred_column_note" 
	            android:defaultValue="@string/fred_defval_column_note"
	            android:order="335">
	        </EditTextPreference>
	        <EditTextPreference 
	            android:key="COLUMN_SECOND_LEVEL_TIMESTAMP" 
	            android:title="@string/fred_second_level_timestamp" 
	            android:defaultValue="@string/fred_defval_second_level_timestamp"
	            android:order="336">
	        </EditTextPreference>
	    </PreferenceScreen>
        <CheckBoxPreference 
            android:key="TABLES_TWO_LEVELS" 
            android:defaultValue="@string/fred_defval_two_levels" 
            android:title="@string/fred_tables_two_levels"
            android:order="337"
            android:summary="@string/fred_parent_table_present_summary">
        </CheckBoxPreference>     
        <PreferenceScreen 
	        android:title="@string/parent_table_info" 
	        android:order="340">
	        <EditTextPreference 
	            android:key="FIRST_LEVEL_TABLE" 
	            android:title="@string/fred_first_level_table" 
	            android:defaultValue="@string/fred_defval_first_level_table"
	            android:order="341">
	        </EditTextPreference>
	        <EditTextPreference 
	            android:key="COLUMN_FIRST_LEVEL_ID" 
	            android:title="@string/fred_first_level_ID" 
	            android:defaultValue="@string/fred_defval_first_level_ID"
	            android:order="342">
	        </EditTextPreference>
	        <EditTextPreference 
	            android:key="COLUMN_FIRST_LEVEL_DESCRIPTOR" 
	            android:title="@string/fred_first_level_descriptor" 
	            android:defaultValue="@string/fred_defval_first_level_descriptor"
	            android:order="343"
	            android:summary="@string/fred_descriptor_summary">
       	 	</EditTextPreference>
	        <EditTextPreference 
	            android:key="COLUMN_FIRST_LEVEL_TIMESTAMP" 
	            android:title="@string/fred_first_level_timestamp" 
	            android:defaultValue="@string/fred_defval_first_level_timestamp"
	            android:order="344">
        	</EditTextPreference>
	    </PreferenceScreen>
    </PreferenceScreen>
</PreferenceScreen>